# {{crate_name}}
#
# Copyright (c) 2020 Jeron Aldaron Lau
# 
# Licensed under the Apache License, Version 2.0, <LICENSE-APACHE or
# https://apache.org/licenses/LICENSE-2.0>, or the Zlib License, <LICENSE-ZLIB
# or http://opensource.org/licenses/Zlib>, at your option. This file may not be
# copied, modified, or distributed except according to those terms.

[package]
name = "{{crate_name}}"
version = "0.0.1"
authors = ["{{authors}}"]
license = "Apache-2.0 OR Zlib"

description = "TAGLINE-REPLACE"
repository = "https://github.com/libcala/{{crate_name}}"
documentation = "https://docs.rs/{{crate_name}}"
homepage = "https://github.com/libcala/{{crate_name}}/blob/master/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "LICENSE-ZLIB", "LICENSE-APACHE", "src/*"]
categories = []
keywords = []
readme = "README.md"
edition = "2018"

[dependencies]

[build-dependencies]

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
